codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__agent_message_cell_reflow_on_resize.snap
---
source: tui2/src/history_cell.rs
expression: snapshot
---
narrow:
• - This is a long list item
    that should reflow when
    the viewport width
    changes. The old
    streaming implementation
    used to bake soft wraps
    into hard line breaks.
# tui2/src/snapshots/codex_tui2__history_cell__tests__agent_message_cell_reflow_on_resize.snap
  
  > A blockquote line that
  > is also long enough to
  > wrap and should reflow
  > cleanly.

wide:
• - This is a long list item that should reflow when the viewport width changes.
    The old streaming implementation used to bake soft wraps into hard line
    breaks.
  
  > A blockquote line that is also long enough to wrap and should reflow
  > cleanly.
