codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__agent_message_cell_reflow_on_resize_vt100.snap
---
source: tui2/src/history_cell.rs
expression: "format!(\"narrow:\\n{narrow}\\n\\nwide:\\n{wide}\")"
---
narrow:
• - This is a long list item
    that should reflow when
    the viewport width
    changes.

# tui2/src/snapshots/codex_tui2__history_cell__tests__agent_message_cell_reflow_on_resize_vt100.snap

  > A blockquote that also
  > reflows across widths.

wide:
• - This is a long list item that should reflow when the viewport
    width changes.


  > A blockquote that also reflows across widths.
