codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: tui2/src/history_cell.rs
expression: rendered
# tui2/src/snapshots/codex_tui2__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
