codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: tui2/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • docs
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server
    • Env: TOKEN=*****, APP_TOKEN=*****
# tui2/src/snapshots/codex_tui2__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
    • Tools: list
    • Resources: (none)
    • Resource templates: (none)

  • http
    • Status: enabled
    • Auth: Unsupported
    • URL: https://example.com/mcp
    • HTTP headers: Authorization=*****
    • Env HTTP headers: X-API-Key=API_KEY_ENV
    • Tools: ping
    • Resources: (none)
    • Resource templates: (none)
